// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-alert should be rendered without props 1`] = `
<div
  className="
            alertWrapper
            
            
          "
>
  <div
    className="
              alert
              type-info
            "
  >
    <span
      className="text"
    >
      Notification
    </span>
    <button
      className="close"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`fyndiq-component-alert should be self-closable 1`] = `
<Alert
  onClose={[Function]}
  stopShowingAfterKey=""
  type="info"
  unclosable={false}
>
  <div
    className="
            alertWrapper
            hidden
            
          "
  >
    <div
      className="
              alert
              type-info
            "
    >
      <span
        className="text"
      />
      <button
        className="close"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
  </div>
</Alert>
`;

exports[`fyndiq-component-alert should be self-closable 2`] = `
<Alert
  onClose={[Function]}
  stopShowingAfterKey=""
  type="info"
  unclosable={false}
>
  <div
    className="
            alertWrapper
            hidden
            removed
          "
  >
    <div
      className="
              alert
              type-info
            "
    >
      <span
        className="text"
      />
      <button
        className="close"
        onClick={[Function]}
      >
        ×
      </button>
    </div>
  </div>
</Alert>
`;

exports[`fyndiq-component-alert should have a type prop 1`] = `
<div
  className="
            alertWrapper
            
            
          "
>
  <div
    className="
              alert
              type-warning
            "
  >
    <span
      className="text"
    >
      Warning
    </span>
    <button
      className="close"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`fyndiq-component-alert should have a type prop 2`] = `
<div
  className="
            alertWrapper
            
            
          "
>
  <div
    className="
              alert
              type-good
            "
  >
    <span
      className="text"
    >
      Good
    </span>
    <button
      className="close"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`fyndiq-component-alert should have a type prop 3`] = `
<div
  className="
            alertWrapper
            
            
          "
>
  <div
    className="
              alert
              type-bad
            "
  >
    <span
      className="text"
    >
      Bad
    </span>
    <button
      className="close"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`fyndiq-component-alert should have unclosable prop 1`] = `
<div
  className="
            alertWrapper
            
            
          "
>
  <div
    className="
              alert
              type-info
            "
  >
    <span
      className="text"
    />
  </div>
</div>
`;

exports[`fyndiq-component-alert stopShowingAfter and stopShowingAfterKey props functionality 1`] = `
<Alert
  onClose={[Function]}
  stopShowingAfter={3}
  stopShowingAfterKey="Information-Alert"
  type="info"
  unclosable={false}
/>
`;
